# baremetal-mcp

./: .flake8  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  SKILLS.md  __init__.py  cache.py  config.py  gemini-extension.json  global_config.yaml  handlers.py  helpers.py  isos.example.yaml  main.py  pyproject.toml  redfish_secrets.example.yaml  redfish_servers.example.yaml  requirements.txt  resources.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: lint.yml  tests.yml
skills/junos-switch/: SKILL.md
skills/update-dell-firmware/: SKILL.md
tests/: conftest.py  test_cache.py  test_config.py  test_handlers.py  test_helpers.py  test_resources.py  test_tools_dell.py  test_tools_hosts.py  test_tools_junos.py  test_tools_media.py  test_tools_redfish.py  test_tools_server.py
tools/: __init__.py  dell.py  hosts.py  junos.py  media.py  redfish.py  server.py
