[project]
name = "baremetal-mcp"
version = "1.0.0"
description = "MCP server for managing bare-metal infrastructure — Redfish BMC operations and Junos switch queries for AI assistants"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "fastmcp>=3.1",
    "httpx>=0.27",
    "paramiko>=3.0",
    "PyYAML>=6.0",
    "urllib3>=2.0",
]

[project.urls]
Homepage = "https://github.com/sshnaidm/baremetal-mcp"
Repository = "https://github.com/sshnaidm/baremetal-mcp"

[project.scripts]
baremetal-mcp = "main:main"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=. --cov-report=term-missing --cov-config=pyproject.toml"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
force-include = { "main.py" = "main.py", "config.py" = "config.py", "cache.py" = "cache.py", "handlers.py" = "handlers.py", "helpers.py" = "helpers.py", "resources.py" = "resources.py", "__init__.py" = "__init__.py" }
